# roxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yaml  tarpaulin.toml
.github/workflows/: build-and-push.yml
benches/: request.rs  rules.rs
benches/common/: mod.rs
docs/: memory-tuning.md  rate-limiting.md  rules.md
loadtest/: run.sh
scripts/: live-stats.sh  memory-test.sh
src/: error.rs  lib.rs  main.rs  util.rs
src/config/: mod.rs  reload.rs  types.rs
src/proxy/: authority.rs  handler.rs  mod.rs  tls.rs
src/ratelimit/: credit.rs  limiter.rs  mod.rs
src/rules/: ast.rs  engine.rs  key.rs  parser.rs
