[package]
name = "roxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# MITM HTTP/S proxy framework
hudsucker = { version = "0.24", features = ["rcgen-ca", "http2"] }

# Async runtime (hudsucker uses tokio)
tokio = { version = "1", features = ["full", "signal"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Rule DSL parsing
nom = "7"

# Pattern matching
globset = "0.4"

# Rate limiting
dashmap = "6"

# Certificate cache
lru = "0.12"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# HTTP types (re-exported by hudsucker but we need them directly)
http = "1"
hyper = "1"
bytes = "1"

# Base64 decoding for PEM certificates
base64 = "0.22"

# Time handling for certificate validity
time = "0.3"

# Async cache for certificate caching (same version as hudsucker)
moka = { version = "0.12", features = ["future"] }

# Random number generation for certificate serial numbers
rand = "0.9"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rules"
harness = false
