[package]
name = "roxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# MITM HTTP/S proxy framework
hudsucker = { version = "0.24", features = ["rcgen-ca", "http2"] }

# Async runtime (hudsucker uses tokio)
tokio = { version = "1", features = ["full", "signal"] }

# Utils to tackle internal configs
hyper-util = { version = "0.1", features = ["full"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"

# Rule DSL parsing
nom = "7"

# Pattern matching
globset = "0.4"

# Rate limiting
dashmap = "6"

# Date/time handling
chrono = "0.4"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Global allocator — jemalloc actively defragments, unlike glibc malloc
# which retains high-water RSS indefinitely.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

# HTTP types (re-exported by hudsucker but we need them directly)
http = "1"
hyper = "1"

# PEM certificate parsing
pem = "3"

# Time handling for certificate validity
time = "0.3"

# Async cache for certificate caching (same version as hudsucker)
moka = { version = "0.12", features = ["future"] }

# Random number generation for certificate serial numbers
rand = "0.9"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rules"
harness = false

[[bench]]
name = "request"
harness = false
